---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 2021-12-19
  Changes:
    - Minimum versions of Angel's Bioprocessing and Angel's Smelting have been incremeneted to the latest versions
  Bugfixes:
    - Fixed startup errors related to changed icon definitions for several buildings to account for graphics changes in Angel's Refinings 0.12.1
---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: 2021-10-16
  Bugfixes:
    - Fixed that tint assignment for Angel's Refining structures did not validate the existence of the field being called leading to a startup error when Artisanal Reskins: Angel's mods is enabled
  Locale:
    - Updated Russian localization
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 2021-09-14
  Changes:
    - Changed icon for Oil refinery 3 to align with changes in Angel's Refining
  Locale:
    - Fixed that Flotation cell 4 was spelled incorrectly
    - Added partial localization for Brazilian Portuguese
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2021-08-13
  Features:
    - Recipes have been reworked to be in-line with current Angel's recipes, and make use of higher tier materials where appropriate
    - Technologies have had their time requirements updated to be more in-line with current Angel's technologies (15s -> 30s)
    - Angel's Bioprocessing minimum required version now 0.7.20
  Changes:
    - Angel's Bioprocessing 0.7.20 adds an Algae farm 4; as such the Algae farm 4 added by this mod has been changed to the Algae farm 5