@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed that several technology icons were not sized correctly when playing with the latest versions of Angel's mods
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.3
 Date: 2021-12-19
